--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,10 @@ kaggle==1.5.6
 matplotlib==3.3.1
 numpy==1.19.1
 pandas==1.1.1
+pillow~=7.2.0
 seaborn==0.10.1
-pytorch==1.6.0
+scikit-learn~=0.23.2
+torch==1.6.0
 torchvision==0.7.0
-wandb==0.9.5
+wandb==0.9.6
+catalyst~=20.8.2
