--- a/config/config.json
+++ b/config/config.json
@@ -8,10 +8,11 @@
   "resample": true,
   "shuffle": false,
   "num_workers": 6,
-  "gpus": "cuda:0",
-  "n_epochs": 4,
-  "batch_size": 64,
+  "device": "cuda:0",
+  "n_epochs": 3,
+  "batch_size": 32,
   "learning_rate": 0.003,
   "early_stop_callback": true,
-  "val_check_interval": 50
+  "val_check_interval": 50,
+  "predict": true
 }
