--- a/config/config.json
+++ b/config/config.json
@@ -6,7 +6,9 @@
   "data_path": "data/x224",
   "data_train": "train.csv",
   "min_class_samples": 5,
-  "resample": true,
+  "use_weighted_sampler": true,
+  "limit_samples_to_draw": true,
+  "replacement": true,
   "shuffle": false,
   "num_workers": 6,
   "device": "cuda:0",
