--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ matplotlib==3.3.1
 numpy==1.19.1
 pandas==1.1.1
 seaborn==0.10.1
-pytorch==1.6.0
+torch==1.6.0
+pytorch-lightning==9.0
 torchvision==0.7.0
-wandb==0.9.5
+wandb==0.9.6
