--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ kaggle==1.5.6
 matplotlib==3.3.1
 numpy==1.19.1
 pandas==1.1.1
+pytorch-lightning==9.0
+pretrainedmodels==0.7.4
 seaborn==0.10.1
 torch==1.6.0
-pytorch-lightning==9.0
 torchvision==0.7.0
 wandb==0.9.6
