config resume from checkpoint

--- a/config/config_arcface_classification.json
+++ b/config/config_arcface_classification.json
@@ -4,7 +4,7 @@
   "use_fc": true,
   "freeze_backbone": true,
   "log_dir": "logs/",
-  "resume_checkpoint": null,
+  "resume_checkpoint": "logs/Landmarks/9gm87ers/checkpoints/epoch=2.ckpt",
   "data_path": "data/x256",
   "data_train": "train.csv",
   "test_size": 96000,
@@ -14,7 +14,7 @@
   "replacement": false,
   "shuffle": false,
   "num_workers": 6,
-  "gpus": "1",
+  "gpus": "0",
   "n_epochs": 10,
   "batch_size": 64,
   "lr": 5e-6,
