--- a/config/config_arcface_classification.json
+++ b/config/config_arcface_classification.json
@@ -5,7 +5,7 @@
   "freeze_backbone": true,
   "log_dir": "logs/",
   "resume_checkpoint": "logs/Landmarks/9gm87ers/checkpoints/epoch=2.ckpt",
-  "ckpt_path": "logs/checkpoints/classification/{epoch}-{val_loss:2f}-{val_acc:2f}.ckpt",
+  "checkpoints_dir": "logs/checkpoints/classification/",
   "data_path": "data/x256",
   "data_train": "train.csv",
   "test_size": 96000,
