--- a/config/config_se-resnext50.json
+++ b/config/config_se-resnext50.json
@@ -1,9 +1,9 @@
 {
-  "model_name": "resnet50",
+  "model_name": "se_resnext50_32x4d",
   "loss_module": "arcface",
   "use_fc": true,
   "log_dir": "logs/",
-  "resume_checkpoint": "logs/checkpoints/classification_init_v/epoch_4-val_loss_15.45-val_acc_0.136.ckpt",
+  "resume_checkpoint": null,
   "checkpoints_dir": "logs/checkpoints/classification/",
   "data_path": "data/x256",
   "data_train": "train.csv",
@@ -15,7 +15,7 @@
   "shuffle": false,
   "num_workers": 6,
   "gpus": "0",
-  "n_epochs": 10,
+  "n_epochs": 5,
   "batch_size": 64,
   "lr": 5e-6,
   "step_size": 2,
