add efficientnet model & freeze backbone

--- a/config/config_efficientnet.json
+++ b/config/config_efficientnet.json
@@ -1,10 +1,12 @@
 {
-  "model_name": "resnet50",
+  "model_name": "efficientnet-b0",
   "loss_module": "arcface",
-  "use_fc": true,
-  "freeze_backbone": false,
+  "use_fc": false,
+  "normalize": false,
+  "pooling_name": null,
+  "freeze_backbone": true,
   "log_dir": "logs/",
-  "resume_checkpoint": "logs/checkpoints/classification_init_v/epoch_4-val_loss_15.45-val_acc_0.136.ckpt",
+  "resume_checkpoint": null,
   "checkpoints_dir": "logs/checkpoints/classification/",
   "data_path": "data/x256",
   "data_train": "train.csv",
@@ -16,7 +18,7 @@
   "shuffle": false,
   "num_workers": 6,
   "gpus": "0",
-  "n_epochs": 10,
+  "n_epochs": 5,
   "batch_size": 64,
   "lr": 5e-6,
   "step_size": 2,
