no crop, minor refactoring

--- a/config/config_efficientnet.json
+++ b/config/config_efficientnet.json
@@ -1,14 +1,14 @@
 {
-  "model_name": "efficientnet-b0",
+  "model_name": "efficientnet-b5",
   "loss_module": "arcface",
   "use_fc": false,
   "normalize": false,
-  "pooling_name": null,
-  "freeze_backbone": true,
+  "pooling_name": "adaptive",
+  "freeze_backbone": false,
   "log_dir": "logs/",
   "resume_checkpoint": null,
   "checkpoints_dir": "logs/checkpoints/classification/",
-  "data_path": "data/x256",
+  "data_path": "data/x224",
   "data_train": "train.csv",
   "test_size": 96000,
   "min_class_samples": 20,
@@ -16,9 +16,9 @@
   "limit_samples_to_draw": false,
   "replacement": false,
   "shuffle": false,
-  "num_workers": 6,
+  "num_workers": 12,
   "gpus": "0",
-  "n_epochs": 5,
+  "n_epochs": 20,
   "batch_size": 64,
   "lr": 5e-6,
   "step_size": 2,
