--- a/config/config_efficientnet.json
+++ b/config/config_efficientnet.json
@@ -1,15 +1,16 @@
 {
-  "model_name": "efficientnet-b5",
+  "model_name": "efficientnet-b4",
   "loss_module": "arcface",
   "use_fc": false,
   "normalize": false,
-  "pooling_name": "adaptive",
+  "pooling_name": null,
   "freeze_backbone": false,
   "log_dir": "logs/",
-  "resume_checkpoint": null,
+  "resume_checkpoint": "logs/Landmarks/3ecnuxo9/checkpoints/epoch=4.ckpt",
   "checkpoints_dir": "logs/checkpoints/classification/",
-  "image_size": 224,
-  "data_path": "data/x224",
+  "image_size": 256,
+  "crop_size": 224,
+  "data_path": "data/x256",
   "data_train": "train.csv",
   "test_size": 96000,
   "min_class_samples": 20,
@@ -20,8 +21,9 @@
   "num_workers": 12,
   "gpus": "0",
   "n_epochs": 20,
-  "batch_size": 64,
+  "batch_size": 32,
   "lr": 5e-6,
+  "scheduler": "cosine_annealing",
   "step_size": 2,
   "gamma": 0.1,
   "val_check_interval": 0.1
