add weighted sampling

--- a/config/config_efficientnet.json
+++ b/config/config_efficientnet.json
@@ -16,17 +16,16 @@
   "data_train": "train.csv",
   "test_size": 96000,
   "min_class_samples": 20,
-  "use_weighted_sampler": false,
-  "limit_samples_to_draw": false,
+  "use_weighted_sampler": true,
+  "limit_samples_to_draw": 512000,
   "replacement": false,
   "shuffle": false,
   "num_workers": 12,
   "gpus": "0",
-  "n_epochs": 20,
+  "n_epochs": 50,
   "batch_size": 32,
   "lr": 5e-6,
   "scheduler": "cosine_annealing",
-  "step_size": 2,
   "gamma": 0.1,
   "val_check_interval": 0.1
 }
