SGD, gradient accumulation, gradient clipping, early_stopping

--- a/config/config_arcface_classification.json
+++ b/config/config_arcface_classification.json
@@ -4,7 +4,7 @@
   "use_fc": true,
   "freeze_backbone": false,
   "log_dir": "logs/",
-  "resume_checkpoint": "logs/checkpoints/classification_init_v/epoch_4-val_loss_15.45-val_acc_0.136.ckpt",
+  "resume_checkpoint": null,
   "checkpoints_dir": "logs/checkpoints/classification/",
   "data_path": "data/x256",
   "data_train": "train.csv",
@@ -16,9 +16,11 @@
   "shuffle": false,
   "num_workers": 6,
   "gpus": "0",
-  "n_epochs": 10,
+  "n_epochs": 5,
   "batch_size": 64,
-  "lr": 5e-6,
+  "accumulate_grad_batches": 4,
+  "optimizer": "SGD",
+  "lr": 0.1,
   "step_size": 2,
   "gamma": 0.1,
   "val_check_interval": 0.1
