img_size=512/448, reduce LR=0.01, add precision, recall, scheduler="reduce_lr_on_plateau"

--- a/config/config_arcface_classification.json
+++ b/config/config_arcface_classification.json
@@ -1,15 +1,18 @@
 {
   "model_name": "resnet50",
   "loss_module": "arcface",
+  "margin": 0.3,
   "use_fc": true,
   "freeze_backbone": false,
   "log_dir": "logs/",
-  "resume_checkpoint": null,
+  "resume_checkpoint": "logs/Landmarks/34gcr7a8/checkpoints/last.ckpt",
   "checkpoints_dir": "logs/checkpoints/classification/",
-  "data_path": "data/x256",
+  "data_path": "data/orig",
   "data_train": "train.csv",
   "test_size": 96000,
   "min_class_samples": 20,
+  "image_size": 512,
+  "crop_size": 448,
   "use_weighted_sampler": false,
   "limit_samples_to_draw": false,
   "replacement": false,
@@ -20,8 +23,11 @@
   "batch_size": 64,
   "accumulate_grad_batches": 4,
   "optimizer": "SGD",
-  "lr": 0.1,
-  "step_size": 2,
-  "gamma": 0.1,
+  "lr": 0.01,
+  "momentum": 0.9,
+  "weight_decay": 0.0001,
+  "scheduler": "reduce_lr_on_plateau",
+  "factor": 0.1,
+  "patience": 2,
   "val_check_interval": 0.1
 }
