continue another round

--- a/config/config_arcface_classification.json
+++ b/config/config_arcface_classification.json
@@ -3,7 +3,7 @@
   "loss_module": "arcface",
   "margin": 0.3,
   "use_fc": true,
-  "freeze_backbone": false,
+  "freeze_backbone": true,
   "log_dir": "logs/",
   "resume_checkpoint": "logs/Landmarks/34gcr7a8/checkpoints/last.ckpt",
   "checkpoints_dir": "logs/checkpoints/classification/",
@@ -19,11 +19,11 @@
   "shuffle": false,
   "num_workers": 6,
   "gpus": "0",
-  "n_epochs": 10,
+  "n_epochs": 15,
   "batch_size": 64,
   "accumulate_grad_batches": 4,
   "optimizer": "SGD",
-  "lr": 0.01,
+  "lr": 0.005,
   "momentum": 0.9,
   "weight_decay": 0.0001,
   "scheduler": "reduce_lr_on_plateau",
