--- a/config/config_efficientnet.json
+++ b/config/config_efficientnet.json
@@ -1,31 +1,37 @@
 {
-  "model_name": "efficientnet-b4",
+  "model_name": "efficientnet-b2",
   "loss_module": "arcface",
   "s": 30,
   "margin": 0.3,
-  "use_fc": false,
+  "use_fc": true,
   "normalize": false,
   "pooling_name": null,
-  "freeze_backbone": true,
+  "dropout": 0.3,
+  "freeze_backbone": false,
   "log_dir": "logs/",
-  "resume_checkpoint": "logs/Landmarks/3ecnuxo9/checkpoints/epoch=4.ckpt",
-  "checkpoints_dir": "logs/checkpoints/classification/",
-  "image_size": 256,
-  "crop_size": 224,
+  "resume_checkpoint": null,
+  "checkpoints_dir": "logs/checkpoints/effnet-b3/",
   "data_path": "data/x256",
   "data_train": "train.csv",
   "test_size": 96000,
-  "min_class_samples": 20,
+  "min_class_samples": 10,
+  "image_size": 256,
+  "crop_size": 224,
   "use_weighted_sampler": true,
   "limit_samples_to_draw": 512000,
   "replacement": false,
   "shuffle": false,
-  "num_workers": 12,
-  "gpus": "1",
-  "n_epochs": 50,
-  "batch_size": 32,
-  "lr": 5e-6,
-  "scheduler": "cosine_annealing",
-  "gamma": 0.1,
+  "num_workers": 6,
+  "gpus": "0",
+  "n_epochs": 15,
+  "batch_size": 64,
+  "accumulate_grad_batches": 4,
+  "optimizer": "SGD",
+  "lr": 0.1,
+  "momentum": 0.9,
+  "weight_decay": 0.0001,
+  "scheduler": "reduce_lr_on_plateau",
+  "factor": 0.1,
+  "patience": 2,
   "val_check_interval": 0.1
 }
