effnet fine-tuning

--- a/config/config_train_efficientnet.json
+++ b/config/config_train_efficientnet.json
@@ -1,20 +1,24 @@
 {
-  "model_name": "resnet50",
+  "model_name": "efficientnet-b2",
   "loss_module": "arcface",
+  "s": 30,
   "margin": 0.3,
   "use_fc": true,
-  "freeze_backbone": true,
+  "normalize": false,
+  "pooling_name": null,
+  "dropout": 0.3,
+  "freeze_backbone": false,
   "log_dir": "logs/",
-  "resume_checkpoint": "logs/Landmarks/rl69xy7l/checkpoints/epoch=2.ckpt",
-  "checkpoints_dir": "logs/checkpoints/classification/",
-  "data_path": "data/orig",
+  "resume_checkpoint": null,
+  "checkpoints_dir": "logs/checkpoints/effnet-b3/",
+  "data_path": "data/x256",
   "data_train": "train.csv",
-  "image_size": 512,
-  "crop_size": 448,
+  "image_size": 256,
+  "crop_size": 224,
   "test_size": 96000,
-  "min_class_samples": 20,
-  "use_weighted_sampler": false,
-  "limit_samples_to_draw": false,
+  "min_class_samples": 10,
+  "use_weighted_sampler": true,
+  "limit_samples_to_draw": 512000,
   "replacement": false,
   "shuffle": false,
   "num_workers": 6,
@@ -23,7 +27,7 @@
   "batch_size": 64,
   "accumulate_grad_batches": 4,
   "optimizer": "SGD",
-  "lr": 0.01,
+  "lr": 0.1,
   "momentum": 0.9,
   "weight_decay": 0.0001,
   "scheduler": "reduce_lr_on_plateau",
