--- a/config/config_fine-tune_efficientnet.json
+++ b/config/config_fine-tune_efficientnet.json
@@ -9,14 +9,14 @@
   "dropout": 0.3,
   "freeze_backbone": false,
   "log_dir": "logs/",
-  "resume_checkpoint": null,
+  "resume_checkpoint": "logs/Landmarks/3iepslqp/checkpoints/epoch=3.ckpt",
   "checkpoints_dir": "logs/checkpoints/effnet-b3/",
-  "data_path": "data/x256",
+  "data_path": "data/orig",
   "data_train": "train.csv",
+  "image_size": 512,
+  "crop_size": 448,
   "test_size": 96000,
   "min_class_samples": 10,
-  "image_size": 256,
-  "crop_size": 224,
   "use_weighted_sampler": true,
   "limit_samples_to_draw": 512000,
   "replacement": false,
