--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 albumentations==0.4.6
-# include_top, not available in v.0.7
+# 'include_top' features, not available in v.0.7
 -e git+git://github.com/lukemelas/EfficientNet-PyTorch.git@4250c2b6bf310f815b16c516ee1583f4bdf4b772
 joblib==0.16.0
 kaggle==1.5.8
@@ -9,6 +9,7 @@ pandas==1.1.1
 pytorch-lightning==0.9.0
 pretrainedmodels==0.7.4
 seaborn==0.10.1
+scikit-learn==0.23.2
 torch==1.6.0
 torchvision==0.7.0
 wandb==0.10.2
